# NullBatchInstaller

./: .gitignore  BUILD_TROUBLESHOOTING.md  Cargo.toml  DRAGDROP_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTALLER_ENGINE_DOCS.md  INSTALL_MANAGER_UPDATE.md  JETBRAINS_PLUGIN_README.md  Makefile  NullBatchInstaller.py  NullBatchInstaller.spec  NullInstaller.cs  POST_INSTALLATION_HOOK.md  README.md  STEP10_TESTING_COMPLETION_SUMMARY.md  STEP4_COMPLETION_SUMMARY.md  STEP6_IMPLEMENTATION_SUMMARY.md  STEP7_TESTING_COMPLETE.md  STEP8_BUILD_COMPLETE.md  STEP9_COMPLETION_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  UI_DESIGN_SUMMARY.md  VERSION  build.bat  build.ps1  build_modern.bat  go.mod  install_jetbrains_plugins.ps1  install_jetbrains_plugins_final.ps1  install_log.txt  installer_engine.go  jetbrains_plugin_hook.ps1  jetbrains_plugin_integration.ps1  main.go  make.bat  requirements.txt  scanner_test.go  test_plugin_download.ps1  test_plugin_download_v2.ps1
assets/: software_catalog.json
src/: main.rs
test/: README.md  TestApp_Failing.bat  TestApp_InstallShield.bat  TestApp_LongRunning.bat  TestApp_NSIS.bat  TestApp_Standard.msi  create_sample_installers.go  gui_test.go  mock_installer.bat  run_all_tests.bat  test_runner.go
tests/: MANUAL_QA_CHECKLIST.md  NullInstaller.Tests.cs  TESTING_DOCUMENTATION.md  ci_pipeline.yml  generate_mocks_simple.ps1  integration_test.ps1  run_tests.ps1  test_report.txt  test_runner_simple.ps1
tests/mock_installers/: Mock7Zip.bat  Mock7Zip.exe.ps1  MockChrome.bat  MockChrome.exe.ps1  MockFailingInstaller.bat  MockFailingInstaller.exe.ps1  (+11 more)
